force-app/main/default/objects/Platform_Setting__c/Platform_Setting__c.object-meta.xml
<CustomObject>
    <label>Platform Setting</label>
    <nameField>
        <displayFormat>PSN - {0000}</displayFormat>
        <label>Platform Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>