force-app/main/default/objects/Platform_Setting__c/fields/Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date__c</fullName>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>