force-app/main/default/objects/Platform_Setting__c/fields/Page_Id__c.field-meta.xml
<CustomField>
    <fullName>Page_Id__c</fullName>
    <label>Page Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>