force-app/main/default/objects/Platform_Setting__c/fields/Platform_Setting_Name__c.field-meta.xml
<CustomField>
    <fullName>Platform_Setting_Name__c</fullName>
    <label>Platform Setting Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>