force-app/main/default/objects/Platform_Setting__c/fields/Post_Id__c.field-meta.xml
<CustomField>
    <fullName>Post_Id__c</fullName>
    <label>Post_Id </label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>