force-app/main/default/objects/Platform_Setting__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope</label>
    <type>TextArea</type>
</CustomField>