force-app/main/default/objects/Platform_Setting__c/fields/Storage__c.field-meta.xml
<CustomField>
    <fullName>Storage__c</fullName>
    <label>Storage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook_Storage</fullName>
            </value>
            <value>
                <fullName>LinkedIn_Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>