force-app/main/default/objects/Platform_Setting__c/fields/User_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>User_Access_Token__c</fullName>
    <label>User Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>